katars/tests/snaps/snapshots/snap_errors__use_after_free.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let raw = unsafe { std.mem.alloc(4) }\\nunsafe { std.mem.free(raw) }\\nunsafe { std.mem.read(raw, 0) }\")"
---
Error: use of deallocated memory
   ╭─[<test>:3:10]
   │
 3 │ unsafe { std.mem.read(raw, 0) }
   │          ──────────┬─────────  
   │                    ╰─────────── use of deallocated memory
───╯
